tests/lean/fail/run_command.lean
run_cmd tactic.fail "Error"
